--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "ejs": "^3.1.6",
     "express": "^4.17.1",
     "method-override": "^3.0.0",
-    "node.js": "*",
+    "node.js": "0.0.1-security",
     "nodemon": "^2.0.7",
     "pg": "^8.5.1",
     "superagent": "^6.1.0"
