--- a/package.json
+++ b/package.json
@@ -26,8 +26,10 @@
     "ejs": "^3.1.6",
     "express": "^4.17.1",
     "method-override": "^3.0.0",
+    "multer": "^1.4.2",
     "node.js": "*",
     "nodemon": "^2.0.7",
+    "path": "^0.12.7",
     "pg": "^8.5.1",
     "superagent": "^6.1.0"
   }
