--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "express": "^4.17.1",
     "method-override": "^3.0.0",
     "multer": "^1.4.2",
-    "node.js": "*",
+    "node.js": "0.0.1-security",
     "nodemon": "^2.0.7",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
