--- a/package.json
+++ b/package.json
@@ -30,14 +30,14 @@
     "express-session": "^1.17.1",
     "method-override": "^3.0.0",
     "multer": "^1.4.2",
-    "node.js": "0.0.1-security",
+    "node.js": "^0.0.1-security",
     "nodemailer": "^6.5.0",
     "nodemailer-express-handlebars": "^4.0.0",
     "nodemon": "^2.0.7",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
     "path": "^0.12.7",
-    "pg": "^8.5.1",
+    "pg": "^8.6.0",
     "superagent": "^6.1.0"
   }
 }
